<resources>
    <string name="app_name">CIDE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_run">运行</string>
    <string name="action_compile">编译</string>
    <string name="action_goto">转到</string>
    <string name="action_setting">设置</string>
    <string name="action_term">终端模拟器</string>
    <string name="c_arg">(c4droid:GCCROOT)bin/(c4droid:PREFIX)-gcc (c4droid:SRC) -lm -ldl -llog -lz -I(c4droid:CURSRCDIR) -std=(c4droid:STD) -Wfatal-errors (c4droid:MODEARGS) -o (c4droid:BIN)</string>
    <string name="cxx_arg">(c4droid:GCCROOT)bin/(c4droid:PREFIX)-g++ (c4droid:SRC) -lm -ldl -llog -lz -lstdc++ -I(c4droid:CURSRCDIR) -std=(c4droid:STD) -Wfatal-errors (c4droid:MODEARGS) -o (c4droid:BIN)</string>
    <string name="mode_arg">(c4droid:PIE) -lncurses -I(c4droid:GCCROOT)(c4droid:PREFIX)/include/ncurses -Wl,-allow-shlib-undefined</string>
    <string name="sdl_arg">-lSDL_image -lSDL_net -ltiff -ljpeg -lpng -lz -lSDL_ttf -lfreetype -lSDL_mixer -lsmpeg -lvorbisfile -lvorbis -logg -lstdc++ -lSDL -I(c4droid:GCCROOT)(c4droid:PREFIX)/include/SDL -Wl,--no-undefined -shared</string>
    <string name="sdl2_arg">-lSDL2_image -lSDL2_net -ltiff -ljpeg -lpng -lz -lSDL2_ttf -lfreetype -lSDL2_mixer -lSDL2_test -lsmpeg2 -lvorbisfile -lvorbis -logg -lstdc++ -lSDL2 -lEGL -lGLESv1_CM -lGLESv2 -landroid -I(c4droid:GCCROOT)(c4droid:PREFIX)/include/SDL2 -Wl,--no-undefined -shared</string>
    <string name="native_arg">(c4droid:GCCROOT)(c4droid:PREFIX)/include/android_native_app_glue.c -landroid -lEGL -lGLESv1_CM -lGLESv2 -Wl,--no-undefined -shared</string>
    <string name="box2d_arg">-lbox2d</string>
    <string name="shell">(c4droid:DATADIR)busybox sh -</string>
    <string name="copy_path">复制文件路径</string>
    <string name="show_file">浏览文件路径</string>
    <string name="close_other">关闭其他文件</string>
    <string name="close_current">关闭当前文件</string>
    <string name="session_rename_title">Set session name</string>
    <string name="session_rename_positive_button">Set</string>
    <string name="session_new_named_title">New named session</string>
    <string name="session_new_named_positive_button">Create</string>
    <string name="new_session">New session</string>
    <string name="new_session_failsafe">Failsafe</string>
    <string name="welcome_dialog_title">Welcome to Termux</string>
    <string name="welcome_dialog_body">Long press anywhere on the terminal for a context menu where Help is available.\n\nExecute \'apt update\' to update the packages list before installing packages.</string>
    <string name="welcome_dialog_dont_show_again_button">Do not show again</string>
    <string name="max_terminals_reached_title">Max terminals reached</string>
    <string name="max_terminals_reached_message">Close down existing ones before creating new.</string>
    <string name="select_url">Select URL</string>
    <string name="select_all_and_share">Share transcript</string>
    <string name="reset_terminal">Reset</string>
    <string name="kill_process">Hangup</string>
    <string name="toggle_fullscreen">Fullscreen</string>
    <string name="style_terminal">Style</string>
    <string name="help">Help</string>
    <string name="select_url_no_found">No URL found in the terminal.</string>
    <string name="select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="select_url_dialog_title">Click URL to copy or long press to open</string>
    <string name="share_transcript_title">Terminal transcript</string>
    <string name="share_transcript_chooser_title">Send text to:</string>
    <string name="confirm_kill_process">Close this process?</string>
    <string name="reset_toast_notification">Terminal reset.</string>
    <string name="styling_not_installed">The Termux:Style add-on is not installed.</string>
    <string name="styling_install">Install</string>
    <string name="toggle_soft_keyboard">Keyboard</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wakelock">Wake</string>
    <string name="notification_action_wifilock">Wifi</string>
    <string name="paste_text">Paste</string>
    <string name="copy_text">Copy</string>
    <string name="text_selection_more">More…</string>
    <string name="bootstrap_error_title">Unable to install</string>
    <string name="bootstrap_error_not_primary_user_message">Termux can only be installed on the primary user account.</string>
    <string name="bootstrap_installer_body">Installing…</string>
    <string name="bootstrap_error_body">Termux was unable to install the bootstrap packages.\n\nCheck your network connection and try again.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="c_std">c99</string>
    <string name="cxx_std">c++0x</string>
    <string name="d_c_std">默认:c99</string>
    <string name="d_cxx_std">默认:c++0x</string>
    <string name="format">格式化</string>
    <string name="inset_path">插入路径</string>
    <string name="inset_time_or_date">插入时间/日期</string>
    <string name="inset_color">插入颜色</string>
    <string name="new_method">新建函数/实现</string>
    <string name="new_variable">新建变量/常量</string>
    <string name="edit">编辑</string>
    <string name="env">export PATH=/busybox-virtual:(c4droid:DATADIR):(c4droid:GCCROOT)bin:(c4droid:GCCROOT)(c4droid:PREFIX)/bin/:$PATH\nexport TMPDIR=(c4droid:DATADIR)/tmpdir\nexport CFLAGS=\"-Os -s (c4droid:PIE)\"\nexport CXXFLAGS=\"-Os -s (c4droid:PIE)\"\nexport SHELL=\"(c4droid:DATADIR)busybox sh\"\nexport CONFIG_SHELL=\"sh\"\nexport PKG_CONFIG_PATH=(c4droid:GCCROOT)(c4droid:PREFIX)/lib/pkgconfig\ncd (c4droid:CURSRCDIR)
  </string>
    <string name="d_env">编译前的环境设置</string>
    <string name="input_line_number">输入行号:</string>
    <string name="save">保存</string>
    <string name="action_find">查找</string>
    <string name="replace">替换</string>
    <string name="find_next">下一个</string>
    <string name="find_precious">上一个</string>
    <string name="find_toggle">替换</string>
    <string name="find_replaceAll">替换全部</string>
    <string name="replace_Next">替换下一个</string>
    <string name="find_setting">搜索设置</string>
    <string name="isWholeWord">匹配整个词</string>
    <string name="isCaseSensitive">区分大小写</string>
    <string name="find">搜索</string>
    <string name="cc">补全建议</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="larger">字体加大</string>
    <string name="smaller">字体减小</string>
    <string name="repair">修复</string>
    <string name="rename">重命名</string>
    <string name="cide_help">使用帮助</string>
    <string name="errNumber">请输入有效数字</string>
    <string name="gotoLine">跳转到行</string>
    <string name="go_to">跳转</string>
    <string name="go_to_dir">转到 …</string>
    <string name="up_to_dir">上级目录</string>
    <string name="into_dir">进入目录</string>
    <string name="paste_dir">从剪贴板访问目录</string>
    <string name="copy_file_name">复制文件名</string>
    <string name="copy_selected_path">复制路径</string>
    <string name="file_info">信息详细</string>
    <string name="send_file">发送</string>
    <string name="delete">删除</string>
    <string name="moveLeft">左移</string>
    <string name="moveRight">右移</string>
    <string name="selectMore">加选</string>
    <string name="cut">剪切</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="browse_dir">浏览目录</string>
    <string name="project_label">项目名:(不输入时则使用当前目录)</string>
    <string name="hello">Hello</string>
    <string name="no_program">不是支持的程序源代码</string>
    <string name="a_directory">A directory</string>
    <string name="file_type">file type</string>
    <string name="selectAll">全选</string>
    <string name="focusCaret">切换光标</string>
    <string name="empty"/>
    <string name="project_dir">目录:</string>
    <string name="project_create">创建</string>
    <string name="create_new">新建</string>
    <string name="file_name">输入新文件名</string>
    <string name="add_to_project">加入已打开的项目</string>
    <string name="close">关闭</string>
    <string name="build">构建</string>
    <string name="clean">清理</string>
    <string name="refresh">刷新</string>
    <string name="short_string_label">"代码片段,参数用/*- 和 -*/括起来"</string>
    <string name="invSelect">反选</string>
    <string name="termux">终端模拟器</string>
    <string name="remove">移除</string>
    <string name="action_out">编译输出</string>
    <string name="cide_updata">更新的内容</string>
    <string name="action_up">安装单架构版本(需要网络)</string>
    <string name="quick">\t{}();,.=\"|&amp;![]&lt;&gt;+-/*</string>
    <string name="copy_all">复制到剪贴板</string>
    <string name="languageCpp">切到C++语言</string>
    <string name="languageC">切到C语言</string>
    <string name="copy_ok">复制完成</string>
    <string name="fail_to_update">更新失败</string>
    <string name="delete_apk">单架构安装包已删除</string>
    <string name="do_it_your_self">无法启动安装程序，请手动操作</string>
    <string name="fail_to_open">没有可用App打开此文件</string>
    <string name="cleanup">清空</string>
    <string name="short_string_code">片段缩写</string>
    <string name="no_name">未命名</string>
    <string name="click_to_add_snippet">点击可编辑代码片段</string>
    <string name="snippet">代码片段</string>
    <string name="user_cancel">你取消了此次更新</string>
    <string name="llvm">llvm</string>
    <string name="attach">Attach</string>
</resources>
