<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:alphabeticShortcut="E"
        android:title="@string/edit"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/cc"
                android:alphabeticShortcut="D"
                android:title="@string/cc"/>
            <item
                android:id="@+id/format"
                android:alphabeticShortcut="F"
                android:title="@string/format"/>
            <item
                android:id="@+id/inset_path"
                android:title="@string/inset_path"/>
            <item
                android:id="@+id/inset_color"
                android:title="@string/inset_color"/>
            <!--item
              android:title="@string/inset_time_or_date"/>
            <item
              android:title="@string/new_method"/>
            <item
              android:title="@string/new_variable"/-->
        </menu>
    </item>
    <item
        android:id="@+id/action_run"
        android:alphabeticShortcut="R"
        android:title="@string/action_run"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_compile"
        android:alphabeticShortcut="B"
        android:title="@string/action_compile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_find"
        android:alphabeticShortcut="J"
        android:title="@string/action_find"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_goto"
        android:alphabeticShortcut="G"
        android:title="@string/action_goto"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_out"
        android:title="@string/action_out"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_term"
        android:alphabeticShortcut="M"
        android:title="@string/action_term"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:alphabeticShortcut="T"
        android:title="@string/action_setting"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_up"
        android:title="@string/action_up"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/cide_help"/>
    <item
        android:id="@+id/action_update"
        android:title="@string/cide_updata"/>
</menu>
