<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="主题">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/theme"
            android:entryValues="@array/ids"
            android:key="theme"
            android:summary="白天"
            android:title="应用主题"/>
        <ListPreference
            android:defaultValue="5"
            android:entries="@array/codeTheme"
            android:entryValues="@array/codeThemeId"
            android:key="codeTheme"
            android:summary="系统"
            android:title="代码主题"/>
        <Preference
            android:key="userColor"
            android:summary="指定编辑器背景色"
            android:title="背景色">
            <intent
                android:action="action.SET_BACKGROUND"
                android:targetClass="org.free.cide.ide.MainActivity"
                android:targetPackage="org.free.cide"/>
        </Preference>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/font"
            android:entryValues="@array/font_ids"
            android:key="font"
            android:summary="默认"
            android:title="字体"/>
        <ListPreference
            android:defaultValue="16"
            android:entries="@array/fontsize"
            android:entryValues="@array/fontsize"
            android:key="font_size"
            android:summary="16"
            android:title="字体大小"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="AntiAlias"
            android:summary="字体抗锯齿"
            android:title="字体平滑"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wordwrap"
            android:title="自动换行"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="screenOn"
            android:summary="当应用处于前台时屏幕常亮"
            android:title="屏幕常亮"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autoSave"
            android:summary="当应用转到后台或退出时自动保存"
            android:title="自动保存"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="快捷符号栏">
        <EditTextPreference
            android:defaultValue="@string/quick"
            android:key="quick"
            android:summary="除制表符(\\t)外忽略其它空白符"
            android:title="快捷符号"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="即时诊断信息/补全设置">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/diagonal"
            android:entryValues="@array/diagonalIds"
            android:key="diagonalDisplay"
            android:summary="3"
            android:title="显示方式"/>
        <ListPreference
            android:defaultValue="1000"
            android:entries="@array/diagonalTimesText"
            android:entryValues="@array/diagonalTimes"
            android:key="diagonalDelay"
            android:summary="1000ms"
            android:title="诊断延时(毫秒)"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sort"
            android:summary="不勾选则按自然优先级"
            android:title="对补全信息按字母排序"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hasParams"
            android:summary="补全时自动带出参数信息"
            android:title="补全参数信息"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="代码格式">
        <ListPreference
            android:defaultValue="@string/llvm"
            android:entries="@array/format"
            android:entryValues="@array/format"
            android:key="format"
            android:summary="选择缩进样式."
            android:title="基本缩进格式"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UseTab"
            android:summary="不勾选则使用空格缩进"
            android:title="使用制表符缩进"/>
        <ListPreference
            android:defaultValue="8"
            android:entries="@array/tabs"
            android:entryValues="@array/tabs"
            android:key="TabWidth"
            android:summary="8"
            android:title="Tab宽度"/>
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/tabs"
            android:entryValues="@array/tabs"
            android:key="IndentWidth"
            android:summary="2"
            android:title="缩进宽度"/>
        <ListPreference
            android:defaultValue="80"
            android:entries="@array/columnLimit"
            android:entryValues="@array/columnLimit"
            android:key="ColumnLimit"
            android:summary="80"
            android:title="单行字数限制"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/codeThemeId"
            android:entryValues="@array/codeThemeId"
            android:key="MaxEmptyLinesToKeep"
            android:summary="0"
            android:title="最大保留空行"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="KeepEmptyLinesAtTheStartOfBlocks"
            android:title="保留作用域前面的空行"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="SortIncludes"
            android:title="#include 按字母排序"/>
        <ListPreference
            android:defaultValue="@string/attach"
            android:entries="@array/format_braces"
            android:entryValues="@array/format_braces"
            android:key="BreakBeforeBraces"
            android:summary="默认"
            android:title="{}缩进样式"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="编译">
        <Preference
            android:key="install"
            android:summary="包含GCC、SDL2和Box2D (22M)"
            android:title="解压安装GCC">
            <intent
                android:action="action.INSTALL"
                android:targetClass="org.free.cide.ide.MainActivity"
                android:targetPackage="org.free.cide"/>
        </Preference>
        <EditTextPreference
            android:defaultValue="@string/shell"
            android:hint="请指定 shell 命令"
            android:key="shell"
            android:title="终端模拟器"/>
        <EditTextPreference
            android:defaultValue="@string/env"
            android:hint="@string/d_env"
            android:key="env"
            android:summary="@string/d_env"
            android:title="编译环境"/>
        <EditTextPreference
            android:defaultValue="@string/c_std"
            android:hint="@string/d_c_std"
            android:key="c_std"
            android:summary="@string/d_c_std"
            android:title="C标准"/>
        <EditTextPreference
            android:defaultValue="@string/cxx_std"
            android:hint="@string/d_cxx_std"
            android:key="cxx_std"
            android:summary="@string/d_cxx_std"
            android:title="C++标准"/>
        <EditTextPreference
            android:defaultValue="@string/c_arg"
            android:key="c_arg"
            android:title="C编译参数"/>
        <EditTextPreference
            android:defaultValue="@string/cxx_arg"
            android:key="cxx_arg"
            android:title="C++编译参数"/>
        <EditTextPreference
            android:defaultValue="@string/mode_arg"
            android:key="mode_arg"
            android:title="模式编译参数"/>
        <EditTextPreference
            android:defaultValue="@string/sdl_arg"
            android:key="sdl_arg"
            android:title="SDL参数"/>
        <EditTextPreference
            android:defaultValue="@string/sdl2_arg"
            android:key="sdl2_arg"
            android:title="SDL2参数"/>
        <EditTextPreference
            android:defaultValue="@string/native_arg"
            android:key="native_arg"
            android:title="NativeActivity参数"/>
        <EditTextPreference
            android:defaultValue="@string/box2d_arg"
            android:key="box2d_arg"
            android:title="Box2D参数"/>
        <EditTextPreference
            android:hint="路径以‘:’隔开"
            android:key="inc"
            android:title="C/C++头文件路径"/>
    </PreferenceCategory>
    <SwitchPreference
        android:checked="false"
        android:key="moreInfo"
        android:title="禁用下面的条目"/>
    <PreferenceCategory
        android:key="more"
        android:title="其他">
        <Preference
            android:key="cide"
            android:summary="点击前往CIDE吧"
            android:title="兴趣专区-百度贴吧(CIDE吧)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://tieba.baidu.com/f?kw=cide"/>
        </Preference>
        <Preference
            android:key="zfb"
            android:summary="我把每一份鼓励变成改进CIDE的动力,百度贴吧ID:不知者来此"
            android:title="[捐赠](需要支付宝)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="alipayqr://platformapi/startapp?saId=10000007&amp;clientVersion=3.7.0.0718&amp;qrcode=https%3A%2F%2Fqr.alipay.com%2Faescsnt49njcwynkda%3F_s%3Dweb-other"/>
        </Preference>
        <Preference
            android:key="aide"
            android:summary="点击前往AIDE吧"
            android:title="推荐编程应用AIDE">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://tieba.baidu.com/f?kw=aide"/>
        </Preference>
        <Preference
            android:key="c4droid"
            android:summary="点击前往C4droid吧"
            android:title="推荐编程应用C4droid">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://tieba.baidu.com/f?kw=c4droid"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>