<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/short_string_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_string_code"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayout_code"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/short_string_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/short_string_label"
            android:inputType="textMultiLine|textNoSuggestions"
            android:minLines="3"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/inputLayout"
        android:text="@string/save"
        tools:ignore="RtlHardcoded"/>
</RelativeLayout>